k8s-autoscaling/src/manifest-etn.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: electroneum
  name: electroneum
spec:
  replicas: 15
  selector:
    matchLabels:
      app: electroneum
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: electroneum
    spec:
      containers:
      - name: etn
        command:
        - /usr/local/bin/xmr-stak-sigint
        image: samnco/xmrminer:2.2.0-cpu
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1200m
            memory: 3Gi
          requests:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - mountPath: /config
          name: etn-config
      # - name: metrics
      #   image: samnco/mwc-miner-metrics:latest
      #   imagePullPolicy: Always
      #   env:
      #   - name: ELECTROMINE_WALLET
      #     value: "etnk1J5msRQJmLJDBcLPuRcHbTtuz8BpWJvS5mD9RooqBzsN2vvxwxA26AeaDVRyegg1fmNY8VuDtSEHt3kcpT5S3eB6WJCWei"
      #   - name: LOAD_INCLUSTER_CONFIG
      #     value: "true"
      #   - name: GRAFANA_GRAPH_ID
      #     value: "1"
      #   ports:
      #   - containerPort: 5050
      #     name: web
      #   resources:
      #     limits:
      #       cpu: 100m
      #       memory: 2048Mi
      #     requests:
      #       cpu: 10m
      #       memory: 1024Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          defaultMode: 420
          name: etn-config
        name: etn-config
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: electroneum
#   # namespace: etn2
#   labels:
#     app: electroneum
# spec:
#   type: NodePort
#   selector:
#     app: electroneum
#   ports:
#   - name: web
#     nodePort: 30500
#     port: 80
#     targetPort: web
