k8s-autoscaling/src/manifest-cluster-metrics.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: metrics
  name: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: metrics
    spec:
      containers:
      - name: metrics
        image: samnco/mwc-miner-metrics:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
          name: web
        resources:
          limits:
            cpu: 2000m
            memory: 2048Mi
          requests:
            cpu: 1000m
            memory: 1024Mi
      dnsPolicy: ClusterFirst
      serviceAccountName: miner-metrics
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: cluster-metrics
  # namespace: etn2
  labels:
    app: metrics
spec:
  type: NodePort
  selector:
    app: metrics
  ports:
  - name: web
    nodePort: 30505
    port: 80
    targetPort: web
