k8s-autoscaling/src/manifest-kube-controller-manager.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: kube-system
  name: kube-controller-manager-prometheus-discovery
  labels:
    k8s-app: kube-controller-manager
spec:
  ports:
  - name: http-metrics
    protocol: TCP
    port: 10252
    targetPort: 10252
---
kind: Endpoints
apiVersion: v1
metadata:
  name: kube-controller-manager
  namespace: kube-system
subsets:
  - addresses:
    - ip: 10.30.0.132
    ports:
    - port: 10252
