k8s-autoscaling/src/manifest-kube-scheduler.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: kube-system
  name: kube-scheduler-prometheus-discovery
  labels:
    k8s-app: kube-scheduler
spec:
  ports:
  - name: http-metrics
    protocol: TCP
    port: 10251
    targetPort: 10251
---
kind: Endpoints
apiVersion: v1
metadata:
  name: kube-scheduler
  namespace: kube-system
subsets:
  - addresses:
    - ip: 10.30.0.132
    ports:
    - port: 10251
